--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  github-pages:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -16,10 +16,7 @@ jobs:
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
           restore-keys: |
             ${{ runner.os }}-gems-
-      - uses: helaili/jekyll-action@2.0.5    # Choose any one of the Jekyll Actions
-        with:                                # Some relative inputs of your action
-          target_branch: 'gh-pages'
+      - uses: helaili/jekyll-action@2.0.5
+        with:
           token: ${{ secrets.GITHUB_TOKEN }}
-        env:
-          JEKYLL_PAT: ${{ secrets.JEKYLL_PAT }}
-          JEKYLL_ENV: production
+          target_branch: 'gh-pages'
